; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixgbe/extr_ixgbe_82599.c_ixgbe_read_eeprom_buffer_82599.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ixgbe/extr_ixgbe_82599.c_ixgbe_read_eeprom_buffer_82599.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ixgbe_hw = type { %struct.ixgbe_eeprom_info }
%struct.ixgbe_eeprom_info = type { i64 }

@IXGBE_ERR_CONFIG = common dso_local global i32 0, align 4
@ixgbe_eeprom_spi = common dso_local global i64 0, align 8
@IXGBE_EERD_MAX_ADDR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ixgbe_hw*, i32, i32, i32*)* @ixgbe_read_eeprom_buffer_82599 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ixgbe_read_eeprom_buffer_82599(%struct.ixgbe_hw* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.ixgbe_hw*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca %struct.ixgbe_eeprom_info*, align 8
  %10 = alloca i32, align 4
  store %struct.ixgbe_hw* %0, %struct.ixgbe_hw** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %11 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %5, align 8
  %12 = getelementptr inbounds %struct.ixgbe_hw, %struct.ixgbe_hw* %11, i32 0, i32 0
  store %struct.ixgbe_eeprom_info* %12, %struct.ixgbe_eeprom_info** %9, align 8
  %13 = load i32, i32* @IXGBE_ERR_CONFIG, align 4
  store i32 %13, i32* %10, align 4
  %14 = load %struct.ixgbe_eeprom_info*, %struct.ixgbe_eeprom_info** %9, align 8
  %15 = getelementptr inbounds %struct.ixgbe_eeprom_info, %struct.ixgbe_eeprom_info* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* @ixgbe_eeprom_spi, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %32

19:                                               ; preds = %4
  %20 = load i32, i32* %6, align 4
  %21 = load i32, i32* %7, align 4
  %22 = sub nsw i32 %21, 1
  %23 = add nsw i32 %20, %22
  %24 = load i32, i32* @IXGBE_EERD_MAX_ADDR, align 4
  %25 = icmp sle i32 %23, %24
  br i1 %25, label %26, label %32

26:                                               ; preds = %19
  %27 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %5, align 8
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %7, align 4
  %30 = load i32*, i32** %8, align 8
  %31 = call i32 @ixgbe_read_eerd_buffer_generic(%struct.ixgbe_hw* %27, i32 %28, i32 %29, i32* %30)
  store i32 %31, i32* %10, align 4
  br label %38

32:                                               ; preds = %19, %4
  %33 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %5, align 8
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* %7, align 4
  %36 = load i32*, i32** %8, align 8
  %37 = call i32 @ixgbe_read_eeprom_buffer_bit_bang_generic(%struct.ixgbe_hw* %33, i32 %34, i32 %35, i32* %36)
  store i32 %37, i32* %10, align 4
  br label %38

38:                                               ; preds = %32, %26
  %39 = load i32, i32* %10, align 4
  ret i32 %39
}

declare dso_local i32 @ixgbe_read_eerd_buffer_generic(%struct.ixgbe_hw*, i32, i32, i32*) #1

declare dso_local i32 @ixgbe_read_eeprom_buffer_bit_bang_generic(%struct.ixgbe_hw*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
